--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,13 +1,13 @@
 <div id="home">
-  <div class="container">
-    <div class="row">
-      <div class="col-8 offset-2">
+  <div class="">
+    <div class="">
+      <div class="">
         
         <h1>Logo will go here</h1>
         <h2>Recipe app tagline</h2>
 
-        <form class="clearfix mb-4" action="POST">
-          <div class="form-group">
+        <form class="" action="POST">
+          <div class="">
             <label for="example-text">Insert Ingredients</label>
             <input type="text" id="example-text" class="form-control" aria-describedby="example-text" placeholder="Enter Example Text">
           </div>
