minor adjustments to index

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,5 +1,5 @@
 <div id="home">
-  <div class="">
+  <div class="columns">
     <div class="">
       <div class="">
         
@@ -7,7 +7,7 @@
         <h2>Recipe app tagline</h2>
 
         <form class="" action="POST">
-          <div class="">
+          <div class="form-group">
             <label for="example-text">Insert Ingredients</label>
             <input type="text" id="example-text" class="form-control" aria-describedby="example-text" placeholder="Enter Example Text">
           </div>
