front end partial

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,23 +1,35 @@
-<div id="home">
-  <div class="columns">
-    <div class="">
-      <div class="">
-        
-        <h1>Logo will go here</h1>
-        <h2>Recipe app tagline</h2>
+<div class="section">
+  <div id="search-box" class="container">
 
-        <form class="" action="POST">
-          <div class="form-group">
-            <label for="example-text">Insert Ingredients</label>
-            <input type="text" id="example-text" class="form-control" aria-describedby="example-text" placeholder="Enter Example Text">
-          </div>
-          <button id="submit" class="btn btn-primary float-right">Get Recipe</button>
-        </form>
-
+    <form action="POST">
+      <div id="search-title" class="columns container is-centered">
+        <label for="recipe-search" class="title is-2 is-full">Insert Ingredients. Get Recipes.</label>
       </div>
-    </div>
+
+
+      <div class="columns">
+        <input type="text" id="search-input" class="input is-large is-rounded is-three-quarters" aria-describedby="recipe-search"
+          placeholder="Type Your Ingredients Here">
+        <button id="search-button" class="button is-primary is-large">Get Recipes</button>
+      </div>
+    </form>
+
   </div>
 </div>
 
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<script src="/js/index.js"></script>
+<div class="section">
+  <div id="" class="container">
+
+    <form action="POST">
+      <h2 class="title is-2"> </h2>
+
+
+      <div class="columns">
+        <input type="text" id="search-input" class="input is-large is-rounded is-three-quarters" aria-describedby="recipe-search"
+          placeholder="Type Your Ingredients Here">
+        <button id="search-button" class="button is-primary is-large">Get Recipes</button>
+      </div>
+    </form>
+
+  </div>
+</div>
