--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -1,3 +1,24 @@
 .list-group-item {
   line-height: 2.5;
 }
+
+html {
+  background-image: url('../images/veg-bg.jpeg');
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+#search-box {
+  background: rgba(255, 255, 255, 0.788);
+  padding: 2.5em;
+  border-radius: 0.5em;
+  box-shadow: 0 .5em 1em rgba(51, 51, 51, 0.3);
+}
+
+#search-input{
+  margin: 0 1em;
+}
+
+#search-title{
+  margin-bottom: 2em;
+}
