--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -17,19 +17,18 @@
   </div>
 </div>
 
-<div class="section">
-  <div id="" class="container">
-
-    <form action="POST">
-      <h2 class="title is-2"> </h2>
-
-
-      <div class="columns">
-        <input type="text" id="search-input" class="input is-large is-rounded is-three-quarters" aria-describedby="recipe-search"
-          placeholder="Type Your Ingredients Here">
-        <button id="search-button" class="button is-primary is-large">Get Recipes</button>
+{{!-- <div class="section">
+  <div id="latest-box" class="container">
+    <div class="columns container is-centered">
+      <div>
+        <h2 class="title is-2">Latest Results</h2>
       </div>
+    </div>
+
+    <div class="columns">
+      {{!-- INSERT LATEST RESULTS HERE FROM DB --}}
+    </div>
     </form>
 
   </div>
-</div>
+</div> --}}
