--- a/views/404.handlebars
+++ b/views/404.handlebars
@@ -1,8 +1,14 @@
-<div class="container">
-  <div class="jumbotron mt-4">
-    <h1 class="display-4 text-center">404 Not Found
-      <span role="img" aria-label="Face with rolling eyes">🙄</span>
-    </h1>
-    <a href="/">← Back To Home</a>
+<div class="section">
+  <div id="latest-box" class="container">
+    <div class="columns container is-centered">
+      <div>
+        <h2 class="title is-2">404 Not Found</h2>
+      </div>
+    </div>
+
+    <div class="columns">
+          <a href="/">← Back To Home</a>
+    </div>
+
   </div>
 </div>
