--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -10,7 +10,6 @@
 </head>
 
 <body>
-<<<<<<< HEAD
   <header>
     <nav class="navbar" role="navigation" aria-label="main navigation">
       <div class="navbar-brand">
@@ -56,13 +55,12 @@
     </nav>
 
   </header>
-=======
 
->>>>>>> Quick branch test
   {{!-- Content goes here --}}
   {{{body}}}
-  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script src="/js/index.js"></script>
+  <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
+    crossorigin="anonymous"></script>
+  <script src="/public/js/edeamAPI.js"></script>
 </body>
 
 </html>
