--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -60,7 +60,7 @@
   {{{body}}}
   <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
     crossorigin="anonymous"></script>
-  <script src="/public/js/edeamAPI.js"></script>
+  <script src="/js/edeamAPI.js"></script>
 </body>
 
 </html>
