trying to make it work sadness so far......

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,7 +1,7 @@
 <div class="section">
   <div id="search-box" class="container">
 
-    <form action="POST">
+    <form>
       <div id="search-title" class="columns container is-centered">
         <label for="recipe-search" class="title is-2 is-full">Insert Ingredients. Get Recipes.</label>
       </div>
@@ -17,7 +17,7 @@
   </div>
 </div>
 
-{{!-- <div class="section">
+<div class="section">
   <div id="latest-box" class="container">
     <div class="columns container is-centered">
       <div>
@@ -28,7 +28,6 @@
     <div class="columns">
       {{!-- INSERT LATEST RESULTS HERE FROM DB --}}
     </div>
-    </form>
 
   </div>
-</div> --}}
+</div>
