adjustments to edemamAPI

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -8,6 +8,10 @@ html {
   background-repeat: no-repeat;
 }
 
+.navbar-item img {
+  max-height: 6.75rem!important;
+}
+
 #search-box {
   background: rgba(255, 255, 255, 0.788);
   padding: 2.5em;
