--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -18,16 +18,17 @@
 </div>
 
 <div class="section">
-  <div id="latest-box" class="container">
-    <div class="columns container is-centered">
+  <div id="latest-box" class="container is-multiline">
+    <div class="columns container is-centered is-full is-multiline">
       <div>
-        <h2 class="title is-2">Latest Results</h2>
+        <h2 class="title is-2">Your Results!</h2>
+      </div>
+      <div id="results-section" class="columns is-multiline">
+        {{!-- INSERT LATEST RESULTS HERE FROM DB --}}
       </div>
     </div>
 
-    <div class="columns">
-      {{!-- INSERT LATEST RESULTS HERE FROM DB --}}
-    </div>
+
 
   </div>
 </div>
