--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -25,7 +25,7 @@
       </div>
 
       <div id="navbarBasicExample" class="navbar-menu">
-        <div class="navbar-start">
+        {{!-- <div class="navbar-start">
           <a class="navbar-item">
             Home
           </a>
@@ -50,7 +50,7 @@
               </a>
             </div>
           </div>
-        </div>
+        </div> --}}
       </div>
     </nav>
 
